<resources>
    <string name="app_name">Robot OS</string>
    <string name="logoImage">logoImage</string>
    <string name="robot_os">Robot OS</string>
    <string name="version_2_0">Version 2.0</string>
    <string name="activity_field_navigation_label">Field Navigation</string>
    <string name="activity_road_navigation_label">Road Navigation</string>
    <string name="activity_manual_override_label">Manual Override</string>
    <string name="activity_color_detection_label">Color Detection</string>
    <string name="activity_face_recognition_label">Facial Recognition</string>
    <string name="activity_scenario_mode_label">Scenario Mode</string>
    <string name="activity_voice_override_label">Voice Override</string>
    <string name="activity_obstacle_avoidance_label">Obstacle Avoidance</string>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_main_menu_label">RobotOS v2</string>
    <string name="control_button">control_button</string>
    <string name="default_distance">--cm</string>
    <string name="title_activity_maps">Map</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="preview">Preview</string>
    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="new_color_selection">Specify a color RGBA</string>
    <string name="new_point">Add new Point to Route</string>
    <string name="save">SAVE</string>
    <string name="alpha">Alpha</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="bearing_range">Bearing range (degrees):</string>
    <string name="map_error_range">Map error range (meters):</string>
    <string name="saved">Changes saved</string>
    <string name="please_fill_correctly">Please fill the fields correctly</string>
    <string name="avoid_angle_range">Obstacle avoid angle range (degrees):</string>
    <string name="avoid_point_map_error">Error range for avoid point (meters):</string>
    <string name="speech_prompt">Listening for a direction command</string>
    <string name="robot_move">Say \'robot move\'</string>
    <string name="route_obstacles">Detected route obstacles</string>
    <string name="face_ratio">Face ratio:</string>
</resources>
