<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jim.robotos_v2.Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="8">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bearing_range"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBearingRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/map_error_range"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMapsErrorRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/avoid_angle_range"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAvoidAngleRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/avoid_point_map_error"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAvoidPointMapError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveSettings"
        android:src="@drawable/save_new" />
</RelativeLayout>
